--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>To Do List | SOStudy</h1>
+    <h2>Organize Sua Rotina 📋💚</h2>
     <div class="content">
         <div class="content--add-item">
             <input type="text" id="input-new-task" placeholder="Digite sua nova task">
