--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             </ol>
         </div>
     </div>
+    <style>
+        font-family: Gatwick;
+    </style>
 </body>
 <script src="script.js"></script>
 </html>
